feat: Completed model refinement with GridSearchCV and cross-validation

--- a/notebooks/01_breast_cancer_diagnosis_eda.ipynb
+++ b/notebooks/01_breast_cancer_diagnosis_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a337aab5",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d5a5935c",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "216e083e",
    "metadata": {},
    "outputs": [
@@ -709,11 +709,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fc020fc0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Starting Model Refinement ---\n",
+      "\n",
+      "Task 1: Hyperparameter Tuning for Random Forest using GridSearchCV\n",
+      "Fitting 5 folds for each of 432 candidates, totalling 2160 fits\n",
+      "\n",
+      "GridSearchCV completed.\n",
+      "Best parameters found: {'max_depth': None, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
+      "Best F1-score on training data (cross-validated): 0.9561\n",
+      "\n",
+      "Task 2: Evaluating the Best Tuned Random Forest Model\n",
+      "Tuned Random Forest - Accuracy: 0.9737\n",
+      "Tuned Random Forest - Precision: 1.0000\n",
+      "Tuned Random Forest - Recall: 0.9286\n",
+      "Tuned Random Forest - F1-Score: 0.9630\n",
+      "Tuned Random Forest - ROC-AUC: 0.9940\n",
+      "\n",
+      "Tuned Random Forest - Confusion Matrix:\n",
+      "[[72  0]\n",
+      " [ 3 39]]\n",
+      "\n",
+      "Tuned Random Forest - Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      1.00      0.98        72\n",
+      "           1       1.00      0.93      0.96        42\n",
+      "\n",
+      "    accuracy                           0.97       114\n",
+      "   macro avg       0.98      0.96      0.97       114\n",
+      "weighted avg       0.97      0.97      0.97       114\n",
+      "\n",
+      "\n",
+      "Comparison: Tuned vs. Original Random Forest on Test Set\n",
+      "           Original RF  Tuned RF\n",
+      "Metric                          \n",
+      "Accuracy        0.9737    0.9737\n",
+      "Precision       1.0000    1.0000\n",
+      "Recall          0.9286    0.9286\n",
+      "F1-Score        0.9630    0.9630\n",
+      "ROC-AUC         0.9929    0.9940\n",
+      "\n",
+      "Task 3: Cross-Validation for Tuned Random Forest Model\n",
+      "Tuned Random Forest Cross-Validation F1-Scores (5-fold): [0.95238095 0.94594595 0.91764706 0.94252874 0.95555556]\n",
+      "Average CV F1-Score: 0.9428 (+/- 0.0134)\n",
+      "\n",
+      "Model refinement complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# --- Section 6: Model Refinement - Hyperparameter Tuning & Cross-Validation ---\n",
+    "print(\"\\n--- Starting Model Refinement ---\")\n",
+    "\n",
+    "# Import necessary tools for tuning and cross-validation\n",
+    "from sklearn.model_selection import GridSearchCV, KFold\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import make_scorer, precision_score, recall_score, f1_score, roc_auc_score, accuracy_score\n",
+    "\n",
+    "# Define the model to tune\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Task 1: Hyperparameter Tuning using GridSearchCV\n",
+    "print(\"\\nTask 1: Hyperparameter Tuning for Random Forest using GridSearchCV\")\n",
+    "\n",
+    "# Define the parameter grid to search\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 150, 200], # Number of trees in the forest\n",
+    "    'max_features': ['sqrt', 'log2', None], # Number of features to consider at each split\n",
+    "    'max_depth': [None, 10, 20, 30], # Maximum depth of the tree\n",
+    "    'min_samples_split': [2, 5, 10], # Minimum number of samples required to split an internal node\n",
+    "    'min_samples_leaf': [1, 2, 4] # Minimum number of samples required to be at a leaf node\n",
+    "}\n",
+    "\n",
+    "# Define a scorer (e.g., F1-score is often good for imbalanced classification like this)\n",
+    "# Or use 'recall' if minimizing false negatives is paramount\n",
+    "scorer = make_scorer(f1_score, average='binary') # Using F1-score for tuning\n",
+    "\n",
+    "# Setup GridSearchCV\n",
+    "# cv=5 means 5-fold cross-validation\n",
+    "# n_jobs=-1 uses all available CPU cores for faster computation\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=rf_model,\n",
+    "    param_grid=param_grid,\n",
+    "    scoring=scorer,\n",
+    "    cv=5, # 5-fold cross-validation\n",
+    "    n_jobs=-1, # Use all CPU cores\n",
+    "    verbose=1 # Print progress messages\n",
+    ")\n",
+    "\n",
+    "# Fit GridSearchCV on the training data\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"\\nGridSearchCV completed.\")\n",
+    "print(f\"Best parameters found: {grid_search.best_params_}\")\n",
+    "print(f\"Best F1-score on training data (cross-validated): {grid_search.best_score_:.4f}\")\n",
+    "\n",
+    "# Task 2: Evaluate the Best Tuned Model\n",
+    "print(\"\\nTask 2: Evaluating the Best Tuned Random Forest Model\")\n",
+    "\n",
+    "best_rf_model = grid_search.best_estimator_ # Get the best model from GridSearchCV\n",
+    "\n",
+    "# Make predictions on the test set with the best model\n",
+    "y_pred_tuned = best_rf_model.predict(X_test)\n",
+    "y_proba_tuned = best_rf_model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Calculate evaluation metrics for the tuned model\n",
+    "accuracy_tuned = accuracy_score(y_test, y_pred_tuned)\n",
+    "precision_tuned = precision_score(y_test, y_pred_tuned)\n",
+    "recall_tuned = recall_score(y_test, y_pred_tuned)\n",
+    "f1_tuned = f1_score(y_test, y_pred_tuned)\n",
+    "roc_auc_tuned = roc_auc_score(y_test, y_proba_tuned)\n",
+    "cm_tuned = confusion_matrix(y_test, y_pred_tuned)\n",
+    "\n",
+    "print(f\"Tuned Random Forest - Accuracy: {accuracy_tuned:.4f}\")\n",
+    "print(f\"Tuned Random Forest - Precision: {precision_tuned:.4f}\")\n",
+    "print(f\"Tuned Random Forest - Recall: {recall_tuned:.4f}\")\n",
+    "print(f\"Tuned Random Forest - F1-Score: {f1_tuned:.4f}\")\n",
+    "print(f\"Tuned Random Forest - ROC-AUC: {roc_auc_tuned:.4f}\")\n",
+    "print(\"\\nTuned Random Forest - Confusion Matrix:\")\n",
+    "print(cm_tuned)\n",
+    "print(\"\\nTuned Random Forest - Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred_tuned))\n",
+    "\n",
+    "# Compare with original Random Forest (from previous section)\n",
+    "print(\"\\nComparison: Tuned vs. Original Random Forest on Test Set\")\n",
+    "original_rf_results = results['Random Forest'] # Access results from previous run\n",
+    "comparison_df = pd.DataFrame({\n",
+    "    'Metric': ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC'],\n",
+    "    'Original RF': [original_rf_results['Accuracy'], original_rf_results['Precision'], \n",
+    "                    original_rf_results['Recall'], original_rf_results['F1-Score'], \n",
+    "                    original_rf_results['ROC-AUC']],\n",
+    "    'Tuned RF': [accuracy_tuned, precision_tuned, recall_tuned, f1_tuned, roc_auc_tuned]\n",
+    "}).set_index('Metric')\n",
+    "print(comparison_df.round(4))\n",
+    "\n",
+    "\n",
+    "# Task 3: Cross-Validation for Robust Performance Estimation\n",
+    "print(\"\\nTask 3: Cross-Validation for Tuned Random Forest Model\")\n",
+    "\n",
+    "# Define cross-validation strategy\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42) # 5-fold cross-validation\n",
+    "\n",
+    "# Perform cross-validation on the BEST TUNED MODEL (or on X_scaled_df, y for full dataset)\n",
+    "# Using 'scoring=scorer' to use F1-score for cross-validation as well\n",
+    "cv_scores = cross_val_score(best_rf_model, X_scaled_df, y, cv=kf, scoring=scorer, n_jobs=-1)\n",
+    "\n",
+    "print(f\"Tuned Random Forest Cross-Validation F1-Scores (5-fold): {cv_scores}\")\n",
+    "print(f\"Average CV F1-Score: {cv_scores.mean():.4f} (+/- {cv_scores.std():.4f})\")\n",
+    "print(\"\\nModel refinement complete.\")"
+   ]
   },
   {
    "cell_type": "code",
